# SSDO

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.txt  imgui.ini
resources/objects/car/: 911_scene.mtl
resources/objects/mc/: mc.mtl
resources/objects/mm/: mm.mtl
resources/objects/robo/: robo.mtl
resources/shaders_ssdo/: blur.fs  direct_light.fs  geometry.fs  indirect_light.fs  lighting.fs
src/: CMakeLists.txt  config.h.in
src/9.ssao/: 9.ssao_blur.fs  9.ssao_geometry.fs  9.ssao_lighting.fs  CMakeLists.txt  ssao.cpp
src/SSDO_PBR/: CMakeLists.txt  main.cpp
src/SSDO_PBR/shaders/: direct_light.fs  indirect_light.fs  ssdo_blur.fs
src/SSDO_PBR_DepthPeeling/: CMakeLists.txt  main.cpp
src/SSDO_PBR_DepthPeeling/shaders/: direct_light.fs  indirect_light.fs  lighting.fs  ssdo_blur.fs  ssdo_geometry.fs  ssdo_geometry2.fs  ssdo_geometry2.vs
src/myssao/: CMakeLists.txt  main.cpp  main1.cpp  ssao.hpp  utils.cpp  utils.hpp
